--- a/HttpRequestHowKteam/HttpRequestHowKteam.csproj
+++ b/HttpRequestHowKteam/HttpRequestHowKteam.csproj
@@ -67,11 +67,14 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="obj\Debug\HttpRequestHowKteam.Form1.resources" />
+    <EmbeddedResource Include="obj\Debug\HttpRequestHowKteam.Properties.Resources.resources" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -81,6 +84,26 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="bin\Debug\HttpRequestHowKteam.exe.config" />
+    <None Include="bin\Debug\res.json" />
+    <None Include="bin\Debug\tessdata\configs\config.cfg" />
+    <None Include="bin\Debug\tessdata\eng.cube.bigrams" />
+    <None Include="bin\Debug\tessdata\eng.cube.fold" />
+    <None Include="bin\Debug\tessdata\eng.cube.lm" />
+    <None Include="bin\Debug\tessdata\eng.cube.nn" />
+    <None Include="bin\Debug\tessdata\eng.cube.params" />
+    <None Include="bin\Debug\tessdata\eng.cube.size" />
+    <None Include="bin\Debug\tessdata\eng.cube.word-freq" />
+    <None Include="bin\Debug\tessdata\eng.tesseract_cube.nn" />
+    <None Include="bin\Debug\tessdata\eng.traineddata" />
+    <None Include="bin\Debug\tessdata\pdf.ttf" />
+    <None Include="bin\Debug\tessdata\pdf.ttx" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferences.cache" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\Debug\HttpRequestHowKteam.csproj.CopyComplete" />
+    <None Include="obj\Debug\HttpRequestHowKteam.csproj.CoreCompileInputs.cache" />
+    <None Include="obj\Debug\HttpRequestHowKteam.csproj.GenerateResource.cache" />
+    <None Include="obj\Debug\HttpRequestHowKteam.csprojAssemblyReference.cache" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -132,12 +155,33 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Debug\AE.Net.Mail.dll" />
+    <Content Include="bin\Debug\AE.Net.Mail.pdb" />
+    <Content Include="bin\Debug\Captcha.jpg" />
+    <Content Include="bin\Debug\HttpRequestHowKteam.exe" />
+    <Content Include="bin\Debug\HttpRequestHowKteam.pdb" />
+    <Content Include="bin\Debug\IronOcr.dll" />
+    <Content Include="bin\Debug\IronOcr.xml" />
+    <Content Include="bin\Debug\Newtonsoft.Json.dll" />
+    <Content Include="bin\Debug\Newtonsoft.Json.xml" />
+    <Content Include="bin\Debug\Patagames.Ocr.dll" />
+    <Content Include="bin\Debug\Patagames.Ocr.xml" />
+    <Content Include="bin\Debug\res.html" />
+    <Content Include="bin\Debug\x64\tesseract.dll" />
+    <Content Include="bin\Debug\x86\tesseract.dll" />
+    <Content Include="bin\Debug\xNet.dll" />
+    <Content Include="obj\Debug\HttpRequestHowKteam.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\HttpRequestHowKteam.exe" />
+    <Content Include="obj\Debug\HttpRequestHowKteam.pdb" />
     <Content Include="x64\tesseract.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="x86\tesseract.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
